starterkits/less/less/component/form.less
/**
 * Form styles.
 */

// Browsers do not recognize pseudo :after selectors, we must create a wrapper
// around the select element to style it properly.
// @see http://stackoverflow.com/q/21103542
.select-wrapper {
  display: inline-block;
  position: relative;
  width: 100%;
  .form-inline & {
    width: auto;
  }
  .input-group & {
    display: table-cell;
    // Reset rounded corners
    &:first-child .form-control:first-child {
      .border-left-radius(@border-radius-base);
    }
    &:last-child .form-control:first-child {
      .border-right-radius(@border-radius-base);
    }
  }
  select {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    line-height: 1;
    padding-right: 2em;
    &::-ms-expand {
      opacity: 0;
    }
  }
  &:after {
    color: @brand-primary;
    content: '▼';
    font-style: normal;
    font-weight: 400;
    line-height: 1;
    margin-top: -.5em;
    padding-right: .5em;
    pointer-events: none;
    position: absolute;
    right: 0;
    top: 50%;
    z-index: 10;

    // Use a more stylish icon if the theme uses glyphicons.
    .has-glyphicons & {
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
      content: '\e114'; // .glyphicon-chevron-down
      display: inline-block;
      font-family: 'Glyphicons Halflings';
    }
    .has-error & {
      color: @state-danger-text;
    }
    .has-success & {
      color: @state-success-text;
    }
    .has-warning & {
      color: @state-warning-text;
    }
  }
}

// Use CSS for required mark.
// Inspired from https://www.drupal.org/node/2152217.
.form-required:after {
  color: #e00;
  /* Use a Unicode symbol to prevent screen-readers from announcing the text. */
  content: " \204E ";
  line-height: 1;
  vertical-align: super;
}

